<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="click"
            type="com.moulinette.dialog.ChangePasswordDialog.MyClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/congretulation_bg"
        android:id="@+id/bottom_sheet"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:gravity="center"
        android:clickable="true">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/logo"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="top|center"
                android:text="@string/popup_chng_pass"
                android:typeface="serif"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:gravity="center|top"
                android:orientation="vertical"
                android:weightSum="1">



                <EditText
                    android:id="@+id/edit_old"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/old_password"
                    android:background="@null"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:inputType="textPassword"
                    app:validateMinLength="@{4}"
                    app:validateEmpty="@{true}"
                    app:validateEmptyMessage="@{@string/old_pass}"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorGray"/>


                <EditText
                    android:id="@+id/edit_new"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/new_password"
                    android:background="@null"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    app:validateMinLength="@{4}"
                    app:validateEmpty="@{true}"
                    app:validateEmptyMessage="@{@string/new_pass}"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorGray"/>



                <EditText
                    android:id="@+id/edit_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@null"
                    android:textColorHint="@color/colorGray"
                    android:hint="@string/confirm_new_password"
                    android:textColor="@color/colorBlack"
                    android:inputType="textPassword"
                    app:validateMinLength="@{4}"
                    app:validateEmpty="@{true}"
                    app:validateEmptyMessage="@{@string/empty_confirm}"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorGray"/>




                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_faded_sel"
                    android:text="@string/cancel"
                    android:onClick="@{click::cancelClick}"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:typeface="monospace"
                    android:textColor="@color/colorBlack" />

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btn_login_sel"
                    android:typeface="monospace"
                    android:text="@string/confirm"
                    android:onClick="@{click::confirmClick}"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>