<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:background="@mipmap/congretulation_bg"
    android:id="@+id/bottom_sheet"
    android:layout_margin="15dp"
    android:padding="15dp"
    android:clickable="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo_login"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="1dp"
        android:paddingRight="1dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="top|center"
            android:text="@string/log_out"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:typeface="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>



        <TextView
            android:id="@+id/titlepop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/do_you_want_to_logout"
            android:typeface="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center|top"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_faded_sel"
               android:text="@string/no"
                android:typeface="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorBlack" />



            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/btn_login_sel"
                android:text="@string/yes"
                android:typeface="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhite" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>