<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.moulinette.models.forget_password.ForgotpasswdRequest" />

        <variable
            name="click"
            type="com.moulinette.activities.Login.MyClickHandler" />
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/congretulation_bg"
    android:id="@+id/bottom_sheet"
    android:layout_margin="15dp"
    android:padding="15dp"
    android:gravity="center"
    android:clickable="true">

<LinearLayout
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/poprootll"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

        <TextView
            android:id="@+id/titlepop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlack"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:typeface="serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/forgot_password"/>








            <EditText
                android:id="@+id/editTextOtp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:layout_marginTop="15dp"
                android:paddingLeft="5dp"
                android:background="@null"
                android:typeface="monospace"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:inputType="textEmailAddress"
                app:validateMinLength="@{4}"
                app:validateEmpty="@{true}"
                app:validateEmptyMessage="@{@string/email_empty}"
                app:validateTypeMessage="@{@string/email_valied}"
                app:validateType='@{"email"}'/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/colorGray"/>


<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_height="wrap_content">



    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_faded_sel"
        android:text="@string/cancel"
        android:typeface="serif"
        android:onClick="@{click::cancelForgetPassClick}"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorBlack" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_login_sel"
        android:text="@string/confirm"
        android:typeface="serif"
        android:onClick="@{click::confirmForgetPassClick}"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorWhite" />


</LinearLayout>
</LinearLayout>
</RelativeLayout>
</layout>