<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>


        <variable
            name="click"
            type="com.moulinette.activities.VoteCast.MyClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/congretulation_bg"
        android:id="@+id/bottom_sheet"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:gravity="center"
        android:clickable="true">

        <LinearLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/poprootll"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titlepop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/colorGreen"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:typeface="serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/congratulations"/>



            <TextView
                android:id="@+id/editTextOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_vote_cast_successfully"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                android:layout_margin="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>


            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="by 27Oct, 2019"
                android:typeface="serif"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                android:textColor="@color/colorRed"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>



            <Button
                android:id="@+id/buttonConfirm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/btn_login_sel"
                android:text="@string/ok"
                android:typeface="serif"
                android:onClick="@{click::okClick}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/colorWhite" />



        </LinearLayout>
    </RelativeLayout>
</layout>